added box and css

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
         <title>Style Playground</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-        
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#top">Style Playground</a>
+        </nav>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-2">
+
+                </div>
+                <div class="col-8 border border-dark shadow-sm zoom" id="shadow-box">
+                    <h1>Hello</h1>
+                </div>
+                <div class="col-2">
+
+                </div>
+            </div>
+        </div>
         
         <script src="" async defer></script>
     </body>
